gen/Grammer/AngularParser.java
// Generated from D:/compiler projects/_last-git/Here-AC/src/Grammer\AngularParser.g4 by ANTLR 4.10.1
package Grammer;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AngularParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WHITESPACE=1, LINE_COMMENT=2, BLOCK_COMMENT=3, IMPORT=4, FROM=5, AS=6, 
		COMPONENT=7, INJECTABLE=8, EXPORT=9, CLASS=10, EXTENDS=11, IMPLEMENTS=12, 
		INTERFACE=13, THIS=14, NG_FOR=15, NG_IF=16, PX=17, IMAGE_SRC=18, CLICK=19, 
		NULL=20, CONSTRUCTOR=21, RETURN=22, SWITCH=23, FOR=24, WHILE=25, DO=26, 
		CASE=27, DEFAULT=28, BREAK=29, CONTINUE=30, IF=31, ELSE=32, KEYOF=33, 
		ASYNC=34, STATIC=35, ABSTRACT=36, LOG=37, CONSOLE=38, READONLY=39, PATH=40, 
		CHILDREN=41, COMPONENT_KW=42, LOADCOMPONENT=43, THEN=44, BOOTSTRAP_APP=45, 
		PROVIDERS=46, PROVIDE_ROUTER=47, LET=48, VAR=49, CONST=50, IN=51, OF=52, 
		NEW=53, ANDAND=54, OROR=55, LT=56, LE=57, GT=58, GE=59, EQEQ=60, NOTEQ=61, 
		STRICT_E=62, STRICT_NE=63, NUMBER=64, STRING=65, BOOLEAN=66, ANY=67, VOID=68, 
		BOOL=69, LIST=70, UNDEFINED=71, UNKNOWN=72, PRIVATE=73, PUBLIC=74, PROTECTED=75, 
		SELECTOR=76, STANDALONE=77, IMPORTS=78, TEMPLATE=79, TEMPLATE_URL=80, 
		STYLES_URL=81, STYLES_URLS=82, STYLES=83, PROVIDED_IN=84, OPEN_CURLY_BRACKET=85, 
		CLOSE_CURLY_BRACKET=86, OPEN_BRACKET=87, CLOSE_BRACKET=88, OPEN_SQUARE_BRACKET=89, 
		CLOSE_SQUARE_BRACKET=90, SEMICOLON=91, COMMA=92, DOT=93, DOT_DOT=94, SPREAD=95, 
		EQ=96, ATT=97, QUESTION=98, ARROW=99, HASH=100, TILDE=101, QUOTE=102, 
		SCOPE_QUOTE=103, APOSTROPHE=104, SLASH=105, STAR=106, OR=107, PERCENTAGE=108, 
		PLUSEQ=109, MINUSEQ=110, STAREQ=111, SLASHEQ=112, PLUS=113, MINUS=114, 
		PP=115, MM=116, STRING_LITERAL=117, NUMERIC_LITERAL=118, BIGINT_LITERAL=119, 
		SYMBOL_LITERAL=120, IDENTIFIER=121, COLOR=122;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_componentBlock = 2, RULE_serviceBlock = 3, 
		RULE_importStatement = 4, RULE_importItems = 5, RULE_interfaceDeclaration = 6, 
		RULE_interfaceBody = 7, RULE_serviceDeclaration = 8, RULE_serviceArguments = 9, 
		RULE_arg = 10, RULE_componentDeclaration = 11, RULE_selectorArg = 12, 
		RULE_standAloneArg = 13, RULE_importArg = 14, RULE_templateArg = 15, RULE_styleArg = 16, 
		RULE_componentArguments = 17, RULE_openComponent = 18, RULE_closeComponent = 19, 
		RULE_htmlDocument = 20, RULE_htmlElement = 21, RULE_openTag = 22, RULE_closeTag = 23, 
		RULE_selfClosingTag = 24, RULE_htmlAttribute = 25, RULE_basicAttribute = 26, 
		RULE_ngFor = 27, RULE_ngIF = 28, RULE_imageAttribute = 29, RULE_actionAttribute = 30, 
		RULE_htmlBinding = 31, RULE_htmlContentBody = 32, RULE_objectExpression = 33, 
		RULE_inlineStyle = 34, RULE_cssDocument = 35, RULE_cssSelector = 36, RULE_attributeSelector = 37, 
		RULE_cssRule = 38, RULE_ruleValue = 39, RULE_routesDeclaration = 40, RULE_routeArray = 41, 
		RULE_routeObject = 42, RULE_routeProperty = 43, RULE_classDeclaration = 44, 
		RULE_classHeritage = 45, RULE_classImplement = 46, RULE_classBody = 47, 
		RULE_classPropertyDeclaration = 48, RULE_methodDeclaration = 49, RULE_decorator = 50, 
		RULE_returnType = 51, RULE_methodBody = 52, RULE_methodBodyProperty = 53, 
		RULE_returnStatement = 54, RULE_printStatement = 55, RULE_parameterList = 56, 
		RULE_parameter = 57, RULE_constructorDeclaration = 58, RULE_constructorParams = 59, 
		RULE_constructorParam = 60, RULE_constructorBody = 61, RULE_constructorBodyProperty = 62, 
		RULE_commonStatement = 63, RULE_blockProperty = 64, RULE_parameterPropertyAssignment = 65, 
		RULE_localVariableDeclaration = 66, RULE_propertyAssignment = 67, RULE_assignDataType = 68, 
		RULE_assigment = 69, RULE_assigmentToNull = 70, RULE_compoundAssignment = 71, 
		RULE_propertyValue = 72, RULE_propertyValueObjects = 73, RULE_literalValue = 74, 
		RULE_objectValue = 75, RULE_objectProperty = 76, RULE_list = 77, RULE_spreadElement = 78, 
		RULE_indexAccessValue = 79, RULE_arrowFunction = 80, RULE_preFix = 81, 
		RULE_postFix = 82, RULE_propertyCall = 83, RULE_methodCall = 84, RULE_dataType = 85, 
		RULE_singleDataType = 86, RULE_type = 87, RULE_typeArguments = 88, RULE_listSuffix = 89, 
		RULE_accessModifiers = 90, RULE_newExpression = 91, RULE_conditionalStatement = 92, 
		RULE_elseIfStatement = 93, RULE_elseStatement = 94, RULE_switchStatement = 95, 
		RULE_caseBlock = 96, RULE_defaultBlock = 97, RULE_caseValue = 98, RULE_caseStatement = 99, 
		RULE_forStatement = 100, RULE_forInitializer = 101, RULE_variableDeclarationList = 102, 
		RULE_variableDeclaration = 103, RULE_whileStatement = 104, RULE_doWhileStatement = 105, 
		RULE_expression = 106, RULE_operation = 107, RULE_block = 108, RULE_declareVarsKeyword = 109;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "componentBlock", "serviceBlock", "importStatement", 
			"importItems", "interfaceDeclaration", "interfaceBody", "serviceDeclaration", 
			"serviceArguments", "arg", "componentDeclaration", "selectorArg", "standAloneArg", 
			"importArg", "templateArg", "styleArg", "componentArguments", "openComponent", 
			"closeComponent", "htmlDocument", "htmlElement", "openTag", "closeTag", 
			"selfClosingTag", "htmlAttribute", "basicAttribute", "ngFor", "ngIF", 
			"imageAttribute", "actionAttribute", "htmlBinding", "htmlContentBody", 
			"objectExpression", "inlineStyle", "cssDocument", "cssSelector", "attributeSelector", 
			"cssRule", "ruleValue", "routesDeclaration", "routeArray", "routeObject", 
			"routeProperty", "classDeclaration", "classHeritage", "classImplement", 
			"classBody", "classPropertyDeclaration", "methodDeclaration", "decorator", 
			"returnType", "methodBody", "methodBodyProperty", "returnStatement", 
			"printStatement", "parameterList", "parameter", "constructorDeclaration", 
			"constructorParams", "constructorParam", "constructorBody", "constructorBodyProperty", 
			"commonStatement", "blockProperty", "parameterPropertyAssignment", "localVariableDeclaration", 
			"propertyAssignment", "assignDataType", "assigment", "assigmentToNull", 
			"compoundAssignment", "propertyValue", "propertyValueObjects", "literalValue", 
			"objectValue", "objectProperty", "list", "spreadElement", "indexAccessValue", 
			"arrowFunction", "preFix", "postFix", "propertyCall", "methodCall", "dataType", 
			"singleDataType", "type", "typeArguments", "listSuffix", "accessModifiers", 
			"newExpression", "conditionalStatement", "elseIfStatement", "elseStatement", 
			"switchStatement", "caseBlock", "defaultBlock", "caseValue", "caseStatement", 
			"forStatement", "forInitializer", "variableDeclarationList", "variableDeclaration", 
			"whileStatement", "doWhileStatement", "expression", "operation", "block", 
			"declareVarsKeyword"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'import'", "'from'", "'as'", "'@Component'", 
			"'@Injectable'", "'export'", "'class'", "'extends'", "'implements'", 
			"'interface'", "'this'", "'ngFor'", "'ngIf'", "'px'", "'src'", "'click'", 
			"'null'", "'constructor'", "'return'", "'switch'", "'for'", "'while'", 
			"'do'", "'case'", "'default'", "'break'", "'continue'", "'if'", "'else'", 
			"'keyof'", "'async'", "'static'", "'abstract'", "'log'", "'console'", 
			"'readonly'", "'path'", "'children'", "'component'", "'loadComponent'", 
			"'then'", "'bootstrapApplication'", "'providers'", "'provideRouter'", 
			"'let'", "'var'", "'const'", "'in'", "'of'", "'new'", "'&&'", "'||'", 
			"'<'", "'<='", "'>'", "'>='", "'=='", "'!='", "'==='", "'!=='", "'number'", 
			"'string'", "'boolean'", "'any'", "'void'", null, "'[]'", "'undefined'", 
			"'unknown'", "'private'", "'public'", "'protected'", "'selector'", "'standalone'", 
			"'imports'", "'template'", "'templateUrl'", "'styleUrl'", "'styleUrls'", 
			"'styles'", "'providedIn'", "'{'", "'}'", "'('", "')'", "'['", "']'", 
			"';'", "','", "'.'", "':'", "'...'", "'='", "'@'", "'?'", "'=>'", "'#'", 
			"'~'", "'\"'", "'`'", "'''", "'/'", "'*'", "'|'", "'%'", "'+='", "'-='", 
			"'*='", "'/='", "'+'", "'-'", "'++'", "'--'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WHITESPACE", "LINE_COMMENT", "BLOCK_COMMENT", "IMPORT", "FROM", 
			"AS", "COMPONENT", "INJECTABLE", "EXPORT", "CLASS", "EXTENDS", "IMPLEMENTS", 
			"INTERFACE", "THIS", "NG_FOR", "NG_IF", "PX", "IMAGE_SRC", "CLICK", "NULL", 
			"CONSTRUCTOR", "RETURN", "SWITCH", "FOR", "WHILE", "DO", "CASE", "DEFAULT", 
			"BREAK", "CONTINUE", "IF", "ELSE", "KEYOF", "ASYNC", "STATIC", "ABSTRACT", 
			"LOG", "CONSOLE", "READONLY", "PATH", "CHILDREN", "COMPONENT_KW", "LOADCOMPONENT", 
			"THEN", "BOOTSTRAP_APP", "PROVIDERS", "PROVIDE_ROUTER", "LET", "VAR", 
			"CONST", "IN", "OF", "NEW", "ANDAND", "OROR", "LT", "LE", "GT", "GE", 
			"EQEQ", "NOTEQ", "STRICT_E", "STRICT_NE", "NUMBER", "STRING", "BOOLEAN", 
			"ANY", "VOID", "BOOL", "LIST", "UNDEFINED", "UNKNOWN", "PRIVATE", "PUBLIC", 
			"PROTECTED", "SELECTOR", "STANDALONE", "IMPORTS", "TEMPLATE", "TEMPLATE_URL", 
			"STYLES_URL", "STYLES_URLS", "STYLES", "PROVIDED_IN", "OPEN_CURLY_BRACKET", 
			"CLOSE_CURLY_BRACKET", "OPEN_BRACKET", "CLOSE_BRACKET", "OPEN_SQUARE_BRACKET", 
			"CLOSE_SQUARE_BRACKET", "SEMICOLON", "COMMA", "DOT", "DOT_DOT", "SPREAD", 
			"EQ", "ATT", "QUESTION", "ARROW", "HASH", "TILDE", "QUOTE", "SCOPE_QUOTE", 
			"APOSTROPHE", "SLASH", "STAR", "OR", "PERCENTAGE", "PLUSEQ", "MINUSEQ", 
			"STAREQ", "SLASHEQ", "PLUS", "MINUS", "PP", "MM", "STRING_LITERAL", "NUMERIC_LITERAL", 
			"BIGINT_LITERAL", "SYMBOL_LITERAL", "IDENTIFIER", "COLOR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AngularParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AngularParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(AngularParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(223);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IMPORT) | (1L << COMPONENT) | (1L << INJECTABLE) | (1L << EXPORT) | (1L << CLASS) | (1L << INTERFACE) | (1L << ABSTRACT) | (1L << CONSOLE) | (1L << LET) | (1L << VAR) | (1L << CONST))) != 0)) {
				{
				{
				setState(220);
				statement();
				}
				}
				setState(225);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(226);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public ImportStatementContext importStatement() {
			return getRuleContext(ImportStatementContext.class,0);
		}
		public RoutesDeclarationContext routesDeclaration() {
			return getRuleContext(RoutesDeclarationContext.class,0);
		}
		public ServiceBlockContext serviceBlock() {
			return getRuleContext(ServiceBlockContext.class,0);
		}
		public InterfaceDeclarationContext interfaceDeclaration() {
			return getRuleContext(InterfaceDeclarationContext.class,0);
		}
		public ComponentBlockContext componentBlock() {
			return getRuleContext(ComponentBlockContext.class,0);
		}
		public ClassDeclarationContext classDeclaration() {
			return getRuleContext(ClassDeclarationContext.class,0);
		}
		public PrintStatementContext printStatement() {
			return getRuleContext(PrintStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(235);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(228);
				importStatement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(229);
				routesDeclaration();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(230);
				serviceBlock();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(231);
				interfaceDeclaration();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(232);
				componentBlock();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(233);
				classDeclaration();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(234);
				printStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
